--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 </form>
 
 
-
+<div id="no-mobile">
+    <span>Your screen is too big</span>
+    </div>
 
     <script src="https://kit.fontawesome.com/14a97f86c4.js" crossorigin="anonymous"></script>
 </body>
